syntax = "proto3";

package forseti;

service ForsetiService {
    rpc TrainModel(TrainModelRequest) returns (TrainModelResponse);
    rpc FineTuneModel(FineTuneModelRequest) returns (FineTuneModelResponse);
    rpc TrainRLAgent(TrainRLAgentRequest) returns (TrainRLAgentResponse);
    rpc RunInference(RunInferenceRequest) returns (RunInferenceResponse);
    rpc ExportModel(ExportModelRequest) returns (ExportModelResponse);
    rpc GetModelStatus(GetModelStatusRequest) returns (GetModelStatusResponse);
}

message TrainModelRequest {
    string model_type = 1;
    string model_config = 2;
    bytes training_data = 3;
    map<string, string> hyperparameters = 4;
}

message TrainModelResponse {
    string model_id = 1;
    string status = 2;
    string training_job_id = 3;
}

message FineTuneModelRequest {
    string base_model_id = 1;
    bytes fine_tuning_data = 2;
    map<string, string> hyperparameters = 3;
}

message FineTuneModelResponse {
    string fine_tuned_model_id = 1;
    string status = 2;
}

message TrainRLAgentRequest {
    string algorithm = 1;
    string environment_config = 2;
    map<string, string> hyperparameters = 3;
}

message TrainRLAgentResponse {
    string agent_id = 1;
    string status = 2;
    string training_job_id = 3;
}

message RunInferenceRequest {
    string model_id = 1;
    bytes input_data = 2;
    map<string, string> parameters = 3;
}

message RunInferenceResponse {
    bytes output_data = 1;
    map<string, double> metrics = 2;
}

message ExportModelRequest {
    string model_id = 1;
    string export_format = 2;
    map<string, string> export_options = 3;
}

message ExportModelResponse {
    bool success = 1;
    string export_path = 2;
    string export_id = 3;
}

message GetModelStatusRequest {
    string model_id = 1;
}

message GetModelStatusResponse {
    string status = 1;
    double progress = 2;
    map<string, string> metadata = 3;
}
